Resolves misalign Icon Buttons [closes #477]

--- a/src/stylesheets/components/_fsa.btn-group.scss
+++ b/src/stylesheets/components/_fsa.btn-group.scss
@@ -5,6 +5,7 @@
   & {
     @include fsa-space-between();
     display: inline-flex;
+    vertical-align: middle;
     white-space: nowrap;
   }
 
@@ -39,6 +40,7 @@
       @include fsa-button;
       @include fsa-button(secondary);
       display: flex;
+      justify-content: center;
       flex: auto;
     }
 
